--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t cynelax22/react-test -f ./client/Dockerfile.dev ./client
+      - run: docker build -t cynelax22/react-test -f ./Dockerfile.dev ./client
       - run: docker run -e CI=true cynelax22/react-test npm test
 
 
