--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,20 +16,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t cynelax22/react-test -f ./client/Dockerfile.dev ./client
+      - run: docker build -t cynelax22/react-test -f ./Dockerfile.dev ./
       - run: docker run -e CI=true cynelax22/react-test npm test
 
 
-      - run: docker build -t cynelax22/multi-client-10-14 ./client
-      - run: docker build -t cynelax22/multi-nginx-10-14 ./nginx
-      - run: docker build -t cynelax22/multi-server-10-14 ./server
-      - run: docker build -t cynelax22/multi-worker-10-14 ./worker
+      # - run: docker build -t cynelax22/multi-client-10-14 ./client
+      # - run: docker build -t cynelax22/multi-nginx-10-14 ./nginx
+      # - run: docker build -t cynelax22/multi-server-10-14 ./server
+      # - run: docker build -t cynelax22/multi-worker-10-14 ./worker
 
 
-      - run: docker push cynelax22/multi-client-10-14
-      - run: docker push cynelax22/multi-nginx-10-14
-      - run: docker push cynelax22/multi-server-10-14
-      - run: docker push cynelax22/multi-worker-10-14
+      # - run: docker push cynelax22/multi-client-10-14
+      # - run: docker push cynelax22/multi-nginx-10-14
+      # - run: docker push cynelax22/multi-server-10-14
+      # - run: docker push cynelax22/multi-worker-10-14
 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
